# swarms-sdk

./: .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  COST_TRACKING_IMPLEMENTATION.md  README.md  api.md  batch_operations.py  comprehensive_example.py  example.py  example_oss.py  individual_agent.py  mypy.ini  pyproject.toml  release-please-config.json  requirements.txt  swarms_example.py  test_client.py
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml  update-client.yml
agent_workspace/prompts/: prompt-id-076b8ff0743144639ae2c21da898b62a.json  prompt-id-08cd500390d444fb8cf4a9f2e627f123.json  prompt-id-1044796ce1d64c0e8c9233e766b447c0.json  prompt-id-110f9cbcbd3a47c885824e1cd7d47ba2.json  prompt-id-1810ab6b73b945d5a2135b76afe319ab.json  prompt-id-20cf915f211f4a62b6a2cd267a7fbf49.json  prompt-id-21e748a23145441f9ab0788271387b3e.json  prompt-id-23b4b38591af4f6e824df89b28283944.json  prompt-id-2ed7bd08cf9a42daa08a9451233538b7.json  prompt-id-2fe69e75764d4ea681f19698d3b4590b.json  prompt-id-352003bf9ed94e8393d2c54a018ff8c5.json  prompt-id-3fabb7d634c44e0fb72827c3b8d46b42.json  prompt-id-4452eb13575a42d6b4f48bacdc545ca0.json  prompt-id-449c9840b814489e884b2342395dce5c.json  prompt-id-45c39f183e884975b69c30d136c13480.json  (+22 more)
examples/utils/: list_swarms.py  (+2 more)
scripts/: lint
swarms_client/: __init__.py  client.py
templates/: README.md
tests/: conftest.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_models.py  test_qs.py  test_required_args.py  test_response.py  test_streaming.py  test_transform.py  tests.py  utils.py
(+96 files in other folders)
