[tool.poetry]
name = "swarms-client"
version = "0.1.7"
description = "A production-grade Python client for the Swarms API"
authors = ["Swarms <support@swarms.world>"]
readme = "README.md"
license = "MIT"
packages = [{include = "swarms_client"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.18.0"
pytest-cov = ">=3.0.0"
black = ">=22.0.0"
isort = ">=5.10.0"
mypy = ">=0.990"
flake8 = ">=4.0.0"

[tool.poetry.urls]
"Bug Reports" = "https://github.com/The-Swarm-Corporation/swarms-sdk/issues"
"Source" = "https://github.com/The-Swarm-Corporation/swarms-sdk"
"Documentation" = "https://docs.swarms.world"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
